<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_nearme"
        android:icon="@drawable/ic_location_pin"
        android:title="@string/nearme" />

    <item
        android:id="@+id/navigation_offers"
        android:icon="@drawable/ic_discount"
        android:title="@string/offers" />
    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_magnifier"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_fav"
        android:icon="@drawable/ic_star"
        android:title="@string/fav" />
    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_round_account"
        android:title="@string/account" />

</menu>
