<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/otpsent"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:padding="1dp"
            android:id="@+id/textInputMobile"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorPrimaryDark">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/etMobile"
                android:textSize="15sp"
                android:textColor="@android:color/black"
                android:hint="@string/mobile"
                app:passwordToggleEnabled="true"
                android:inputType="phone"
                android:digits="0123456789"


                />

        </android.support.design.widget.TextInputLayout>
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"
            android:id="@+id/pbarpwd"/>
    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/blink_gren_button"
        android:text="@string/send"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:textSize="15sp"
        android:id="@+id/btnSendOtp"/>
</LinearLayout>