<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/textInputOtp"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etfpwdotp"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:hint="@string/otp"
            app:passwordToggleEnabled="true"
            android:inputType="phone"
            android:digits="0123456789"

            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/textInputnewpwd"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etnewPwd"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:hint="@string/newpwd"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"
            />

    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:id="@+id/textInputConfirmnewpwd"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etnewConfirmedPwd"
            android:textSize="15sp"
            android:textColor="@android:color/black"
            android:hint="@string/confirmpwd"
            app:passwordToggleEnabled="true"
            android:inputType="textPassword"

            />

    </android.support.design.widget.TextInputLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:id="@+id/pbarpwd"/>
    <Button
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:background="@drawable/blink_gren_button"
        android:text="@string/reset"
        android:textColor="@android:color/white"
        android:layout_gravity="bottom|center"
        android:layout_marginBottom="15dp"
        android:textSize="15sp"
        android:id="@+id/btnResetPwd"/>
</LinearLayout>