<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/corner_background"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:weightSum="1"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"
        android:gravity="center"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linCamera">
            <com.barberapp.barberuser.utils.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_photo_camera"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/camera"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/linGallery"
            android:layout_marginLeft="70dp">
            <com.barberapp.barberuser.utils.CircleImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/ic_grid"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gallery"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="10dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.3"
        android:textColor="@android:color/darker_gray"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/cancel"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:id="@+id/txtCancel"/>
</LinearLayout>