<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/ic_dummy_splash"
    tools:context=".view.activity.SignupActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <include layout="@layout/app_main_view"/>
        <LinearLayout
            android:layout_below="@+id/linearMainView"
            android:layout_marginTop="30dp"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="15dp"
            android:paddingRight="15dp"
            android:background="@drawable/corner_background">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/getstarted"
                android:gravity="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"/>
            <View
                android:layout_width="50dp"
                android:layout_height="3dp"
                android:layout_gravity="center"
                android:background="@color/colorPrimaryDark"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="vertical">
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:id="@+id/textInputMobile"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etMobile"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:hint="@string/mobile"
                        app:passwordToggleEnabled="true"
                        android:inputType="phone"
                        android:digits="0123456789"

                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:id="@+id/textInputName"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etName"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:hint="@string/name"
                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:id="@+id/textEmailid"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etEmail"
                        android:textSize="15sp"
                        android:textColor="@android:color/black"
                        android:hint="@string/email"

                        />

                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:padding="1dp"
                    android:id="@+id/textInputPwd"
                    android:layout_below="@+id/textInputSchoolId"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/colorPrimaryDark"
                    >

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/etPassword"
                        android:textSize="15sp"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPrimaryDark"
                        android:hint="@string/password"
                        app:passwordToggleEnabled="true"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:layout_width="140dp"
                android:layout_height="50dp"
                android:background="@drawable/blink_gren_button"
                android:text="@string/signup"
                android:textColor="@android:color/white"
                android:layout_gravity="bottom|center"
                android:layout_marginBottom="15dp"
                android:textSize="15sp"
                android:id="@+id/btnSignUp"/>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>